--- a/data-storage/src/main/resources/application.yml
+++ b/data-storage/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       - mongodb
   data:
     mongodb:
-      database: PDR_to_Voice_Converter
+      database: PDF_to_Voice_Converter
 server:
   port:
     7000
