--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
-.idea/
+.idea
 *.iws
 *.iml
 *.ipr
@@ -43,4 +43,4 @@ bin/
 .DS_Store
 
 ### MongoDB ###
-/data-storage/src/main/resources/mongodb-application.yml
+/data-storage/src/main/resources/application-mongodb.yml
