Use Eureka and properties instead of hardcoded values

--- a/converter-api/src/main/resources/application.yml
+++ b/converter-api/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 server:
   port:
     7005
+spring:
+  application:
+    name: CONVERTER-API
+eureka:
+  instance:
+    hostname: localhost:7025
+  client:
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}/eureka
