--- a/user-interface/src/main/resources/application.yml
+++ b/user-interface/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 7010
+spring:
+  application:
+    name: USER-INTERFACE
+eureka:
+  instance:
+    hostname: localhost:7025
+  client:
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}/eureka
+pvc:
+  processor:
+    apiPath: /api/v1
