--- a/data-storage/src/main/resources/application.yml
+++ b/data-storage/src/main/resources/application.yml
@@ -17,6 +17,6 @@ eureka:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}/eureka
 pvc:
-  file:
+  dataStorage:
     localStoragePath: E:\PDF_to_Voice_Converter_storage
     localStorageSize: 2
