--- a/converter-api/src/main/resources/application.yml
+++ b/converter-api/src/main/resources/application.yml
@@ -5,8 +5,9 @@ spring:
   application:
     name: CONVERTER-API
 eureka:
-  instance:
-    hostname: localhost:7025
+  server:
+    defaultHost: localhost
+    defaultPort: 7025
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}/eureka
+      defaultZone: http://${eureka.server.defaultHost}:${eureka.server.defaultPort}/eureka
