--- a/data-storage/src/main/resources/application.yml
+++ b/data-storage/src/main/resources/application.yml
@@ -11,11 +11,12 @@ server:
   port:
     7000
 eureka:
-  instance:
-    hostname: localhost:7025
+  server:
+    defaultHost: localhost
+    defaultPort: 7025
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}/eureka
+      defaultZone: http://${eureka.server.defaultHost}:${eureka.server.defaultPort}/eureka
 pvc:
   data-storage:
     localStoragePath: E:\PDF_to_Voice_Converter_storage
