--- a/processor/src/main/resources/application.yml
+++ b/processor/src/main/resources/application.yml
@@ -4,11 +4,12 @@ spring:
   application:
     name: PROCESSOR
 eureka:
-  instance:
-    hostname: localhost:7025
+  server:
+    defaultHost: localhost
+    defaultPort: 7025
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}/eureka
+      defaultZone: http://${eureka.server.defaultHost}:${eureka.server.defaultPort}/eureka
 pvc:
   converterApi:
     apiPath: /api/v1
