Error handling configuration

--- a/user-interface/src/main/resources/application.yml
+++ b/user-interface/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 7010
+  error:
+    path: /error
+    whitelabel:
+      enabled: false
 spring:
   application:
     name: USER-INTERFACE
