Add oauth2 GitHub profile

--- a/user-interface/src/main/resources/application.yml
+++ b/user-interface/src/main/resources/application.yml
@@ -6,6 +6,9 @@ server:
     whitelabel:
       enabled: false
 spring:
+  profiles:
+    include:
+      - oauth2
   application:
     name: USER-INTERFACE
 eureka:
