--- a/converter-api/src/main/resources/application.yml
+++ b/converter-api/src/main/resources/application.yml
@@ -1,13 +1,8 @@
 server:
-  port:
-    7005
+  port: 7005
 spring:
+  profiles:
+    include:
+      - eureka
   application:
     name: CONVERTER-API
-eureka:
-  server:
-    defaultHost: localhost
-    defaultPort: 7025
-  client:
-    serviceUrl:
-      defaultZone: http://${eureka.server.defaultHost}:${eureka.server.defaultPort}/eureka
