--- a/data-storage/src/main/resources/application.yml
+++ b/data-storage/src/main/resources/application.yml
@@ -1,23 +1,10 @@
+server:
+  port: 7000
 spring:
   application:
     name: DATA-STORAGE
   profiles:
     include:
+      - eureka
+      - pvc
       - mongodb
-  data:
-    mongodb:
-      database: PDF_to_Voice_Converter
-server:
-  port:
-    7000
-eureka:
-  server:
-    defaultHost: localhost
-    defaultPort: 7025
-  client:
-    serviceUrl:
-      defaultZone: http://${eureka.server.defaultHost}:${eureka.server.defaultPort}/eureka
-pvc:
-  data-storage:
-    localStoragePath: E:\PDF_to_Voice_Converter_storage
-    localStorageSize: 2
