--- a/processor/src/main/resources/application.yml
+++ b/processor/src/main/resources/application.yml
@@ -1,17 +1,9 @@
 server:
   port: 7015
 spring:
+  profiles:
+    include:
+      - eureka
+      - pvc
   application:
     name: PROCESSOR
-eureka:
-  server:
-    defaultHost: localhost
-    defaultPort: 7025
-  client:
-    serviceUrl:
-      defaultZone: http://${eureka.server.defaultHost}:${eureka.server.defaultPort}/eureka
-pvc:
-  converterApi:
-    apiPath: /api/v1
-  dataStorage:
-    apiPath: /api/v1
