Add PvcUserDto and it's validation error messages

--- a/shared-objects/src/main/resources/validationMessages.properties
+++ b/shared-objects/src/main/resources/validationMessages.properties
@@ -1,2 +1,4 @@
 dataStorage.pvcFileConstrainedDto.filename.isEmpty=Field PvcFileDto.filename is empty
 dataStorage.pvcFileConstrainedDto.file.isEmpty=Field PvcFileDto.file is empty
+dataStorage.pvcUserConstrainedDto.username.isEmpty=Field PvcUserDto.username is empty
+dataStorage.pvcUserConstrainedDto.password.isEmpty=Field PvcUserDto.password is empty
