Add email field in the user entity

--- a/shared-objects/src/main/resources/validationMessages.properties
+++ b/shared-objects/src/main/resources/validationMessages.properties
@@ -2,3 +2,4 @@ dataStorage.pvcFileConstrainedDto.filename.isEmpty=Field PvcFileDto.filename is 
 dataStorage.pvcFileConstrainedDto.file.isEmpty=Field PvcFileDto.file is empty
 dataStorage.pvcUserConstrainedDto.username.isEmpty=Field PvcUserDto.username is empty
 dataStorage.pvcUserConstrainedDto.password.isEmpty=Field PvcUserDto.password is empty
+dataStorage.pvcUserConstrainedDto.email.isEmpty=Field PvcUserDto.email is empty
