--- a/auth-server/src/main/resources/ValidationMessages.properties
+++ b/auth-server/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,8 @@
-registration.username.required=Field 'username' is required
-registration.username.size=Field 'username' must be between {2} and {1} characters long
-registration.email.required=Field 'email' is required
-registration.email.pattern=Field 'email' has an incorrect value
-registration.email.max=Field 'email' length must be {1} characters or less
-registration.password.required=Field 'password' is required
-registration.password.size=Field 'password' must be between {2} and {1} characters long
+registration.username.required=Field "username" is required
+registration.username.size=Field "username" must be between {2} and {1} characters long
+registration.username.pattern=Field "username" must contain only [0-9, a-z, A-Z, _, -] characters
+registration.email.required=Field "email" is required
+registration.email.pattern=Field "email" has an incorrect value
+registration.email.max=Field "email" length must be {1} characters or less
+registration.password.required=Field "password" is required
+registration.password.size=Field "password" must be between {2} and {1} characters long
