--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: ${pvc.authServer.port}
+  error:
+    path: /error
+    include-message: always
+    whitelabel:
+      enabled: false
 spring:
   profiles:
     include:
