Move app name, auth data in shared objects

--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -10,6 +10,5 @@ spring:
     include:
       - eureka
       - pvc
-      - oauth2
   application:
-    name: AUTH-SERVER
+    name: ${pvc.authServer.appName}
