--- a/data-storage/src/main/resources/application.yml
+++ b/data-storage/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       - pvc
       - mongodb
   application:
-    name: DATA-STORAGE
+    name: ${pvc.dataStorage.appName}
   data:
     mongodb:
       auto-index-creation: true
